# kursach

./: AddScreen.qml  CMakeLists.txt  Card.qml  DetailScreen.qml  Main.qml  MainScreen.qml  main.cpp  recipemanager.cpp  recipemanager.h
